<resources>
    <string name="app_name">EasyCooking</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="cooking_is_easy">Cooking is easy</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reenter_password">Reenter password</string>
    <string name="login_now">Login now</string>
    <string name="already_have_account">Already have account</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="recommend">Recommend</string>
    <string name="what_to_eat">What to eat?</string>
    <string name="categories">Categories</string>
    <string name="dummny_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
</resources>