<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/white"
        android:title="@string/home"/>
    <item
        android:enabled="true"
        android:id="@+id/navFavorite"
        android:icon="@drawable/ic_heart"
        android:iconTint="@color/white"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/navSearch"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/search"/>
    <item
        android:id="@+id/navUser"
        android:enabled="true"
        android:icon="@drawable/ic_user__outline"
        android:iconTint="@color/white"
        android:title="@string/user"/>
</menu>